--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ title: 404 Page Not Found
 ---
 
 <div id="home">
-  <h2><i class="fa fa-frown-o"></i> Whoah, that's a 404 Error</h2>
+  <h2><i class="fa fa-frown-o"></i> Aw, 404 Error, No</h2>
   <ul id="blog-posts" class="posts">
-    <p>Hey, sorry, but the page you're trying to access doesn't exist. Try <a href="/">going back to the homepage.</a></p>
+    <p>This is not the page you're looking for, but we can't find it either. Return <a href="/">to homepage?</a></p>
   <br /></ul>
 </div>
